--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,17 @@
 body {
   padding-top: 50px;
+  background-color: #0F1B26;
+  color: white;
+  font-family: "Roboto", sans-serif;
+}
+
+h2 {
+  font-family: "Overpass Mono", monospace;
+}
+
+.navbar {
+  background-color: #0F1B26;
+  border-bottom: 2px solid #F2C1BD;
 }
 
 #title-page {
@@ -9,6 +21,7 @@ body {
   background-attachment: fixed;
   background-size: cover;
   background-attachment: center center;
+  border-bottom: 2px solid #F2C1BD;
 }
 
 /*# sourceMappingURL=styles.css.map */
