--- a/styles.scss
+++ b/styles.scss
@@ -35,7 +35,7 @@ h2 {
     padding-bottom: 0;
     padding-top: 60px;
     border-bottom: 2px solid $light-color;
-    height: 100vh;
+    min-height: 100vh;
 }
 
 // LANDING PAGE 
@@ -46,7 +46,7 @@ h2 {
 }
 
 #title-image {
-    height: 100vw;
+    height: 100vh;
     margin: 0;
     position: fixed;
     left: 50%;
