--- a/styles.scss
+++ b/styles.scss
@@ -33,7 +33,7 @@ h2 {
     background-color: $darkest-color;
     margin-bottom: 0;
     padding-bottom: 0;
-    padding-top: 60px;
+    padding-top: 80px;
     border-bottom: 2px solid $light-color;
     min-height: 100vh;
 }
@@ -46,7 +46,9 @@ h2 {
 }
 
 #title-image {
-    height: 100vh;
+    min-height: 100vh;
+    width: 100vw;
+    object-fit: cover;
     margin: 0;
     position: fixed;
     left: 50%;
@@ -56,7 +58,8 @@ h2 {
 }
 
 // size of title image
-$main-title-height: 50px;
+    // add media response here so that title changes size with viewport size 
+$main-title-height: 65px;
 $sub-title-height: 20px;
 
 #title #main-title {
@@ -80,4 +83,92 @@ $title-spacing: 10px;
     top: -o-calc(50% + #{$title-spacing});
     top: calc(50% + #{$title-spacing});
     z-index: -1;
+}
+
+
+/* Timeline holder */
+ul.timeline {
+    list-style-type: none;
+    position: relative;
+    padding-left: 1.5rem;
+    color: $darkest-color;
+}
+
+ /* Timeline vertical line */
+ul.timeline:before {
+    content: ' ';
+    background: $lightest-color;
+    display: inline-block;
+    position: absolute;
+    left: 16px;
+    width: 4px;
+    height: 100%;
+    z-index: 400;
+    border-radius: 1rem;
+}
+
+li.timeline-item {
+    margin: 20px 0;
+}
+
+/* Timeline item arrow */
+.timeline-arrow {
+    border-top: 0.5rem solid transparent;
+    border-right: 0.5rem solid $lightest-color;
+    border-bottom: 0.5rem solid transparent;
+    display: block;
+    position: absolute;
+    left: 2rem;
+}
+
+/* Timeline item circle marker */
+li.timeline-item::before {
+    content: ' ';
+    background: $darkest-color;
+    display: inline-block;
+    position: absolute;
+    border-radius: 50%;
+    border: 3px solid $lightest-color;
+    left: 11px;
+    width: 14px;
+    height: 14px;
+    z-index: 400;
+    box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
+}
+
+// Contact tiles for contact page 
+.contactTile {
+    --size-contact-tile: 5.5rem;
+    height: var(--size-contact-tile);
+    width: var(--size-contact-tile);
+
+    i { 
+        font-size: calc(var(--size-contact-tile)*0.7);
+        color: $dark-color;
+        z-index: 4;
+        position: absolute;
+        left: 50%;
+        top: 50%;
+        transform: translate(-50%,-50%);
+    }
+    p {
+        font-family: 'Open Sans', sans-serif;
+        font-size: calc(var(--size-contact-tile)*0.2);
+        color: $lightest-color;
+        z-index: 3;
+        position: absolute;
+        left: 50%;
+        top: 50%;
+        transform: translate(-50%,180%);
+    }
+    .circle {
+        width: 100%;
+        height: 100%;
+        background: $light-color;
+        border-radius: 50%;
+        z-index: 1;
+    }
+    .circle:hover {
+        background: $lightest-color;
+    }
 }
